fixed layout issue

--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -1,12 +1,14 @@
 .footer {
+  flex: 0.2;
   position: fixed;
   display: flex;
   justify-content: space-between;
   bottom: 0;
-  height: 65px;
-  width: 97%;
+  width: 100%;
+  height: 15vh;
   background-color: #282828;
   padding: 20px;
+  box-sizing: border-box;
 }
 
 .footer__icon {
