--- a/src/components/player/index.css
+++ b/src/components/player/index.css
@@ -1,3 +1,5 @@
 .player__content {
   display: flex;
+  flex: 0.8;
+  height: 85vh;
 }
